--- a/package.json
+++ b/package.json
@@ -8,12 +8,8 @@
     "babel-cli": "^6.24.1",
     "babel-runtime": "^6.20.0",
     "ejs": "^2.5.6",
-    "express": "^4.15.2",
-    "express-session": "^1.15.2",
     "meteor-node-stubs": "~0.2.4",
-    "passport": "^0.3.2",
-    "passport-steam": "^1.0.8",
-    "request": "^2.81.0"
+    "promise-queue": "^2.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
@@ -22,7 +18,11 @@
   "postcss": {
     "plugins": {
       "precss": {},
-      "autoprefixer": {"browsers": ["last 3 versions"]}
+      "autoprefixer": {
+        "browsers": [
+          "last 3 versions"
+        ]
+      }
     }
   }
 }
